<resources>
    <string name="app_name">Distance Converter</string>
    <string name="action_settings">Settings</string>
    <string name="Kilometers">to Kilometers</string>
    <string name="fahrenheit">to Miles</string>
    <string name="calc">Calculate</string>

</resources>
